// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@nx/next/plugin integrated projects should create nodes 1`] = `
[
  [
    "my-app/next.config.js",
    {
      "projects": {
        "my-app": {
          "root": "my-app",
          "targets": {
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "my-build": {
              "cache": true,
              "command": "next build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "default",
                "^production",
                {
                  "externalDependencies": [
                    "next",
                  ],
                },
              ],
              "options": {
                "cwd": "my-app",
                "tty": false,
              },
              "outputs": [
                "{workspaceRoot}/my-app/.next/!(cache)/**/*",
                "{workspaceRoot}/my-app/.next/!(cache)",
              ],
              "syncGenerators": [
                "@nx/js:typescript-sync",
              ],
            },
            "my-serve": {
              "command": "next dev",
              "continuous": true,
              "options": {
                "cwd": "my-app",
              },
              "syncGenerators": [
                "@nx/js:typescript-sync",
              ],
            },
            "my-serve-static": {
              "command": "next start",
              "continuous": true,
              "dependsOn": [
                "my-build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "my-start": {
              "command": "next start",
              "continuous": true,
              "dependsOn": [
                "my-build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "watch-deps": {
              "command": "npx --ignore-scripts nx watch --projects my-app --includeDependentProjects -- npx --ignore-scripts nx build-deps my-app",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/next/plugin root projects should create nodes 1`] = `
[
  [
    "next.config.js",
    {
      "projects": {
        ".": {
          "root": ".",
          "targets": {
            "build": {
              "cache": true,
              "command": "next build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "default",
                "^production",
                {
                  "externalDependencies": [
                    "next",
                  ],
                },
              ],
              "options": {
                "cwd": ".",
                "tty": false,
              },
              "outputs": [
                "{projectRoot}/.next/!(cache)/**/*",
                "{projectRoot}/.next/!(cache)",
              ],
              "syncGenerators": [
                "@nx/js:typescript-sync",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "dev": {
              "command": "next dev",
              "continuous": true,
              "options": {
                "cwd": ".",
              },
              "syncGenerators": [
                "@nx/js:typescript-sync",
              ],
            },
            "serve-static": {
              "command": "next start",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": ".",
              },
            },
            "start": {
              "command": "next start",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": ".",
              },
            },
            "watch-deps": {
              "command": "npx --ignore-scripts nx watch --projects next --includeDependentProjects -- npx --ignore-scripts nx build-deps next",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;
